--- a/Diagnosis.Common.Presentation/Resources/ImageResources.xaml
+++ b/Diagnosis.Common.Presentation/Resources/ImageResources.xaml
@@ -6,5 +6,7 @@
     <Geometry x:Key="RightTriangle">M0,0 L5,4 L0,8</Geometry>
     
     <BitmapImage x:Key="findImage"
-                 UriSource="/Resources/Images/Find_5650.png"  />
+                 UriSource="pack://application:,,,/Diagnosis.Common.Presentation;component/Resources/Images/Find_5650.png"  />
+    <BitmapImage x:Key="editImage"
+                 UriSource="pack://application:,,,/Diagnosis.Common.Presentation;component/Resources/Images/pencil_005_16xLG.png"  />
 </ResourceDictionary>
