--- a/Diagnosis.Client.App/Controls/CriteriaParts/EstimatorEditor.xaml
+++ b/Diagnosis.Client.App/Controls/CriteriaParts/EstimatorEditor.xaml
@@ -26,7 +26,8 @@
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto" />
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*"
+                              MaxWidth="200" />
             <ColumnDefinition Width="10" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
